[package]
name = "lore-web-collections-bin-lexer-2026-04-07-1-impl-2026-04-07-2"
version = "0.0.5"
edition = "2024"
license = "MIT"
description = "Lore Web Collections Bin"
homepage = "https://fleetinglore.github.io"
repository = "https://github.com/dotCorain/lore-web-collections"
readme = "README.md"

[features]
math = []  # 只是一个标记，表示这个 feature 存在
default = []

[dependencies]
toml = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
lore-web-collections-core = { version = "0.1.1" }
lore-lexer-web-collections-2026-04-07-1 = { version = "0.1.0" }
lore-impl-web-collections-2026-04-07-2 = { version = "0.1.4" }